--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carneliantius - Home</title>
+    <title>carneliantius - Home</title>
     <link rel="icon" type="https://cdn.discordapp.com/attachments/801973775695478809/839153616614850660/carnel.png" href=""/>
     <meta name="keywords" content="Carnel, carneliantius, Fortnite, Among us, Roblox, Minecraft" />
     <meta name="description" content="carneliantius approved." />
