--- a/index.htm
+++ b/index.htm
@@ -73,7 +73,8 @@
       <div class="project">unused</a></div><br/><br/><br/>
     </div>
     <div id="tohide">
-      <div class="project">My Discord: carneliantius#0990</div><br/><br/>
+      <div class="project">Carnel's former discord: carneliantius#0990</div><br/><br/>
+      <div class="project">My discord: Bee Mario#5469</div><br/><br/>
       <div> <a href="/JavaScript Test/index">CarnelJS</a>
     </div>
   </div>
